<resources>
    <string name="app_name">PolyLook</string>
    <string name="app_version_text">Версия приложения: 1.0.1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Уведомления</string>
    <string name="group_number">Номер группы</string>
    <string name="auth_hint">Войдите в свою учётную запись!</string>
    <string name="pass">Пароль</string>
    <string name="email">Электронная почта</string>
    <string name="login">Войти</string>
    <string name="register">Зарегестрироваться</string>
    <string name="reset_pass_hint">Забыли пароль?</string>
    <string name="next">Продолжить</string>
    <string name="reg_email_mainText">Введите Email</string>
    <string name="reg_email_subText">Электронная почта будет использоваться для авторизации</string>
    <string name="reg_pass_mainText">Введите пароль</string>
    <string name="showPass">Показать пароль</string>
    <string name="hidePass">Скрыть пароль</string>
    <string name="reg_finish_finishBTN">Авторизоваться</string>
    <string name="reset_pass_subText">На почту будет отправлено письмо с инструкцией по сбросу пароля</string>
    <string name="auth_mainText">Авторизируйтесь</string>
    <string name="reg_pass_subText">Используйте надёждный пароль, содержащий не менее 6 символов!</string>
    <string name="reg_finish_mainText">Регистрация почти завершена</string>
    <string name="reg_finish_subText">Войдите в свой аккаунт, чтобы завершить регистрацию</string>
    <string name="reset_finish_mainText">Проверьте почту</string>
    <string name="reset_finish_subText">Сообщение с инструкцией по сбросу пароля отправлено</string>
    <string name="reset_finish_nextBTN">Авторизоваться</string>
    <string name="reg_finish_error">К сожалению, что-то пошло не так и мы не смогли вас зарегестрировать :(  Попробуйте позже…</string>
    <string name="auth_main_error">Неудачная попытка входа!</string>
    <string name="exit_from_app_mainText">Выход из приложения!</string>
    <string name="exit_from_app_subText">Вы хотите выйти из приложения?</string>
    <string name="good_choice">Правильный выбор, детка!</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="email_error">Вы забыли ввести почту :)</string>
    <string name="email_error_registered">Данная электронная почта уже зарегистрирована!</string>
    <string name="pass_error">Вы забыли ввести пароль :)</string>
    <string name="pass_error_length">Пароль должен быть не менее 6 символов!</string>
    <string name="welcome">Изменение имени</string>
    <string name="welcome_start_subText">Введите имя и фамилию, которые будет отображаться в профиле</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="welcome_start_name_error">Вы не ввели ваше имя!</string>
    <string name="welcome_start_surname_error">Вы не ввели вашу фамилию!</string>
    <string name="welcome_group_subText">Введите номер вашей группы, в которой вы обучаетесь</string>
    <string name="welcome_group_mainText">Выберите группу</string>
    <string name="welcome_group_error">Вы не ввели номер вашей группы!</string>
    <string name="exit">Выйти</string>
    <string name="tasks">Задачи</string>
    <string name="navigation">Навигация</string>
    <string name="schedule">Расписание</string>
    <string name="menu_scheme">Схемы корпусов</string>
    <string name="menu">Меню</string>
    <string-array name="buildings">
        <item>Главное здание</item>
        <item>1-й корпус</item>
        <item>2-й корпус</item>
        <item>3-й корпус</item>
        <item>4-й корпус</item>
        <item>5-й корпус</item>
        <item>6-й корпус</item>
        <item>9-й корпус</item>
        <item>10-й корпус</item>
        <item>11-й корпус</item>
        <item>15-й корпус (ИМОП)</item>
        <item>16-й корпус</item>        <!-- 11 -->
        <item>1-й гидрокорпус</item>
        <item>2-й гидрокорпус</item>
        <item>Химический корпус</item>
        <item>Механический корпус</item>
        <item>НИК</item>                <!-- 16 -->
        <item>Спортивный комплекс</item>                <!-- 17 -->
        <item>Гидробашня</item>                <!-- 18 -->
        <item>Лабораторный корпус</item>                <!-- 19 -->
        <item>НОЦ РАН</item>                <!-- 20 -->
        <item>Секретариат приёмной комиссии</item>                <!-- 21 -->
        <item>ИПМЭиТ</item>                <!-- 22 -->
        <item>Дом учёных в Лесном</item>                <!-- 23 -->
        <item>1-й профессорский корпус</item>                <!-- 24 -->
        <item>2-й профессорский корпус</item>                <!-- 24 -->
    </string-array>
    <string name="chooseRoute">Выберите маршрут</string>
    <string name="navigation_choose_from_error">Вы не ввели точку отправления!</string>
    <string name="navigation_choose_to_error">Вы не ввели точку прибытия!</string>
    <string name="navigation_choose_adress_error">Введите корректный адресс</string>
    <string name="notes">Заметки</string>
    <string name="notes_homework_item">Задания</string>
    <string name="save">Сохранить</string>
    <string name="notes_subtitle">Содержимое заметки</string>
    <string name="notes_title">Название заметки</string>
    <string name="notes_error_subtitle">Введите содержимое заметки!</string>
    <string name="notes_error_title">Введите название заметки!</string>
    <string name="connection_error">Проблема с интернет соединением, повторите попытку позже!</string>
    <string name="group_error">Введите корректный номер группы!</string>
    <string name="sunday">Воскресенье</string>
    <string name="saturday">Суббота</string>
    <string name="friday">Пятница</string>
    <string name="thursday">Четверг</string>
    <string name="wednesday">Среда</string>
    <string name="tuesday">Вторник</string>
    <string name="monday">Понедельник</string>
    <string name="change">Изменить</string>
    <string name="change_password">Изменить пароль</string>
    <string name="about_app">О приложении</string>
    <string name="change_name">Сменить имя профиля</string>
    <string name="auditory_format">%s, ауд. %s</string>
    <string name="unknown">Неизвестно</string>
    <string name="schedule_network_failed">Не удалось соединиться с сервером. Проверьте подключение</string>
    <string name="schedule_parsing_failed">Не удалось получить расписание. Неверный запрос</string>
    <string name="schedule_window_text">Пара заканчивается в %s,\nбудет окно в %s</string>
    <string name="schedule_delta_time_format">%d ч. %d мин.</string>
    <string name="button_switch">переключить</string>
    <string name="schedule_day_no_lessons">В этот день занятий не обнаружено</string>
    <string name="old_pass">Старый пароль</string>
    <string name="new_pass">Новый пароль</string>
    <string name="change_pass_succesful">Пароль успешно изменён!</string>
    <string name="change_pass_error">Неудалось изменить пароль!</string>
    <string name="change_pass_error_oldPass">Введён неверный пароль!</string>
    <string name="change_email">Изменить электронную почту</string>
    <string name="new_email">Новая электронная почта</string>
    <string name="current_pass">Текущий пароль</string>
    <string name="change_email_succesfull">Электронная почта успешно изменена!</string>
    <string name="change_email_error">Неудалось изменить электронную почту!</string>
    <string name="change_pass">Изменение пароля</string>
    <string name="change_email2">Изменение электронной почты</string>
    <string name="choose_faculty">Выберите институт</string>
    <string name="navigation_origin">Откуда</string>
    <string name="navigation_destination">Куда</string>
    <string name="navigation_request_route">Построить маршрут</string>
    <string name="navigation_show_map">Открыть карту</string>
    <string name="about_contact">Связаться с разработчиком</string>
    <string name="about_mark">Оценить приложение в Google Play</string>
    <string name="about_copyright">Копирайт</string>
    <string name="useful_links">Полезные ссылки</string>
    <string name="sites_title">ОБРАЗОВАТЕЛЬНЫЕ ПОРТАЛЫ</string>
    <string name="central_server_lms" translatable="false">Центральный сервер (LMS)</string>
    <string name="fvo" translatable="false">Факультет военного обучения</string>
    <string name="portasp" translatable="false">Портал аспирантуры</string>
    <string name="dliets" translatable="false">Институт энергетики</string>
    <string name="dlido" translatable="false">Институт дополнительного образования</string>
    <string name="dlvsbtipt" translatable="false">Институт биомедицинских систем и биотехнологий</string>
    <string name="dleei" translatable="false">Институт промышленного менеджмента, экономики и торговли</string>
    <string name="dliamm" translatable="false">Институт прикладной математики и механики</string>
    <string name="dliamt" translatable="false">Институт передовых производственных технологий</string>
    <string name="immetdist" translatable="false">Институт машиностроения, материалов и транспорта</string>
    <string name="dlice" translatable="false">Инженерно-строительный институт</string>
    <string name="dlphnt" translatable="false">Институт физики, нанотехнологий и телекоммуникаций</string>
    <string name="dlifkst" translatable="false">Институт физической культуры</string>
    <string name="dl" translatable="false">Институт компьютерных наук и технологий</string>
    <string name="dlhum" translatable="false">Гуманитарный институт</string>
    <string name="night_theme">Тёмная тема</string>
    <string name="teachers">Преподаватели</string>
    <string name="images">Изображения</string>
    <string name="enter_group_number">Введите номер группы</string>
    <string name="saved_groups">Сохранённые группы</string>
    <string name="VK_APP_PACKAGE_ID">com.vkontakte.android</string>
    <string name="choose_name">Выберети себе имя!</string>
    <string name="need_authorize">Необходимо авторизоваться!</string>
    <string name="exit_profile">Выход из аккаунта</string>
    <string name="exit_profile_text">Вы уверены, что хотите выйти из своего аккаунта?</string>
    <string-array name="calendar_short_weekdays">
        <item>Пн</item>
        <item>Вт</item>
        <item>Ср</item>
        <item>Чт</item>
        <item>Пт</item>
        <item>Сб</item>
        <item>Вс</item>
    </string-array>
</resources>
