<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.tabs.ChangePassFragment">

    <ImageView
        android:id="@+id/changePass_backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/ic_arrow_back_green"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/changePass_mainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfbold"
            android:gravity="center"
            android:text="@string/change_pass"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/changePass_oldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/changePass_mainText"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/sfregular"
            android:gravity="center"
            android:hint="@string/old_pass"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/changePass_newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/changePass_oldPass"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/sfregular"
            android:gravity="center"
            android:hint="@string/new_pass"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/changePass_saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/changePass_newPass"
            android:layout_marginTop="25dp"
            android:background="@drawable/reg_btn"
            android:text="@string/change"
            android:textSize="16sp" />


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/changePass_progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>