<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.tabs.ChangeNameFragment">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <TextView
            android:id="@+id/welcome_start_mainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/polyBlack"
            android:text="@string/welcome"
            android:textSize="30sp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcome_start_subText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/welcome_start_mainText"
            android:text="@string/welcome_start_subText"
            android:textSize="18sp"
            android:gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/changeName_nameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_below="@id/welcome_start_subText"
            app:hintEnabled="false"
            app:errorEnabled="true" >

            <EditText
                android:gravity="center"
                android:id="@+id/changeName_nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/changeName_surnameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_below="@id/changeName_nameTIL"
            app:hintEnabled="false"
            app:errorEnabled="true" >

            <EditText
                android:id="@+id/changeName_surnameET"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/surname"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>


    <Button
        android:id="@+id/changeName_nextBTN"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_btn"
        android:text="@string/save"
        android:textSize="16sp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="@android:color/white" />

</RelativeLayout>