<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.tabs.NavigationChooseFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <TextView
            android:id="@+id/nav_mainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:text="@string/chooseRoute"
            android:textSize="30sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nav_fromTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nav_mainText"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <AutoCompleteTextView
                android:id="@+id/nav_fromACTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="0"
                android:hint="@string/navigation_origin"
                android:inputType="textAutoComplete"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nav_toTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nav_fromTIL"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <AutoCompleteTextView
                android:id="@+id/nav_toACTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:hint="@string/navigation_destination"
                android:inputType="textAutoComplete"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/nav_loadBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nav_toTIL"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/log_btn"
            android:text="@string/navigation_request_route"
            android:textSize="17sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/nav_openMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/reg_btn"
        android:text="@string/navigation_show_map"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>