<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.tabs.RegisterPassFragment">

    <ImageView
        android:id="@+id/reg_pass_backBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:src="@drawable/ic_arrow_back_green"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <TextView
            android:id="@+id/reg_pass_mainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:text="@string/reg_pass_mainText"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reg_pass_subText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_pass_mainText"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:text="@string/reg_pass_subText"
            android:textSize="19sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_pass_passTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_pass_subText"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/reg_pass_passET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textPassword"
                tools:ignore="Autofill,LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/reg_pass_showPassBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_pass_passTIL"
            android:gravity="center"
            android:text="@string/showPass" />

    </RelativeLayout>

    <Button
        android:id="@+id/reg_pass_nextBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/reg_btn"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>